@@ -82,6 +82,7 @@ ERROR_VARIABLE_INITIAL_VALUE_SELF_REFERENCES_NOT_ALLOWED = Self-references are n
 ERROR_VARIABLE_INITIAL_VALUE_CIRCULAR_REFERENCES_NOT_ALLOWED = Circular-references are not allowed inside Variables' InitialValue expression
 ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = Implicit circular-references are not allowed inside Variables' InitialValue expression
 ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = References to dynamic script variables are not allowed inside Variables' InitialValue expression
+ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED = References to XPDL String variables are not allowed inside Variables' InitialValue expression
 
 ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = XPDL string variable self-references are not allowed
 ERROR_XPDL_STRING_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = XPDL string variable circular-references are not allowed
