@@ -75,6 +75,7 @@
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_CIRCULAR_REFERENCES_NOT_ALLOWED = Circular-references are not allowed inside Variables' InitialValue expression
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = Implicit circular-references are not allowed inside Variables' InitialValue expression
 #Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = References to dynamic script variables are not allowed inside Variables' InitialValue expression
+#Missing translation -> ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED = References to XPDL String variables are not allowed inside Variables' InitialValue expression
 
 #Missing translation -> ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = XPDL string variable self-references are not allowed
 #Missing translation -> ERROR_XPDL_STRING_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = XPDL string variable circular-references are not allowed
