@@ -75,6 +75,7 @@ ERROR_VARIABLE_INITIAL_VALUE_SELF_REFERENCES_NOT_ALLOWED = Nije dozvoljeno samo-
 ERROR_VARIABLE_INITIAL_VALUE_CIRCULAR_REFERENCES_NOT_ALLOWED = Nije dozvoljeno uzajamno-referenciranje unutar 'InitialValue' izraza varijable
 ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = Nije dozvoljeno implicitno uzajamno-referenciranje unutar 'InitialValue' izraza varijable
 ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = Nije dozvoljeno referenciranje dinami\u010Dkih skript varijabli unutar 'InitialValue' izraza varijable
+ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED = Nije dozvoljeno referenciranje XPDL string varijabli unutar 'InitialValue' izraza varijable
 
 ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = Nije dozvoljeno samo-referenciranje XPDL string varijable
 ERROR_XPDL_STRING_VARIABLE_CIRCULAR_REFERENCES_NOT_ALLOWED = Nije dozvoljeno uzajamno-referenciranje XPDL string varijabli
