@@ -102,6 +102,8 @@ public final class SharkValidationErrorIds {
    public static final String ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED";
 
    public static final String ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED";
+   
+   public static final String ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED";
 
    public static final String ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = "ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED";
 
